--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "core-js": "^3.6.5",
     "echarts": "^5.1.2",
     "element-ui": "^2.4.5",
     "lodash": "^4.17.21",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-quill-editor": "^3.0.6",
-    "vue-router": "^3.2.0",
+    "vue-router": "^3.5.2",
     "vue-table-with-tree-grid": "^0.2.4"
   },
   "devDependencies": {
@@ -26,6 +28,7 @@
     "@vue/eslint-config-standard": "^5.1.2",
     "babel-eslint": "^10.1.0",
     "babel-plugin-component": "^1.1.1",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
